# haskell-phrasebook

./: .ghci  asking for type  binary.hs  bounded-queues.hs  branching.hs  cabal.project  common-types.hs  concurrent-logging.hs  concurrent-processes.hs  crypto-hashing.hs  default.nix  dynamic.hs  enum ranges  enum-ranges.hs  file-handles.hs  fold.hs  folding-lists.hs  for-loops.hs  functions.hs  generate-outputs  guard.hs  hash-based-containers.hs  hashing.hs  hie.yaml  how to define functions  if-else.hs  invert.hs  logging.hs  mapSet.hs  moments-in-time.hs  monitoring.hs  mutable-references.hs  mutable-vectors.hs  number types  outputs.nix  palindrome.hs  partial-application.hs  paths-and-directories.hs  phrasebook.cabal  power.hs  (+15 more)
.github/: FUNDING.yml
.github/workflows/: test.yml
docs/: build-tools.md  contributing.md  license.txt  readme.md  thanks.md
docs/assets/css/: style.scss
outputs/: bounded-queues.txt  branching.txt  common-types.txt  concurrent-logging.txt  crypto-hashing.txt  dynamic.txt  enum-ranges.txt  file-handles.txt  folding-lists.txt  for-loops.txt  functions.txt  hashing.txt  invert.txt  logging.txt  monitoring.txt  mutable-references.txt  queues.txt  records-with-optics.txt  representing-enums.txt  threads.txt  threadsafe-logging.txt  time.txt  timeouts.txt  transactions.txt  variables.txt
tests/: PhrasebookTesting.hs  test-bounded-queues.hs  test-branching.hs  test-common-types.hs  test-crypto-hashing.hs  test-dynamic.hs  test-enum-ranges.hs  test-file-handles.hs  test-folding-lists.hs  test-for-loops.hs  test-functions.hs  test-guard.hs  test-hashing.hs  test-hello-world.hs  test-if-else.hs  test-invert.hs  test-logging.hs  test-moments-in-time.hs  test-monitoring.hs  test-mutable-references.hs  test-records-with-optics.hs  test-threads.hs  test-timeouts.hs  test-transactions.hs  test-variables.hs
tools/: default.nix  generate-outputs  ghcide  haskell.nix  outputs.nix  overrides.nix  phrasebook.cabal  push-to-cache  push-to-cache.hs  readme.md  shell.nix  test  update-versions  versions.json
